[project]
name = "tebe_znak_telegram"
version = "0.2"
dependencies = [
    "loguru==0.7.3",
    "aiogram==3.20.0.post0",
    "pytz==2025.2",
    "sqlalchemy==2.0.41",
    "APScheduler==3.11.0",
    "tabulate==0.9.0",
    "chardet==5.2.0",
    "python-dotenv==1.1.0",
    "colorama==0.4.6",
]
show_publisher_params_on_run = true
debug_mode = false



[scheduler]
timezone = "Europe/Moscow"
post_hours = ['8:00', '14:00', '20:00']



[msg_construct]
data_path = "data"
message_history = "message_history.json"
messages = "message.json"
max_history = 350
artifact = "%name%"



[database]
file_path = "database/"
file_name = "database.db"